Cancel max-width RWD on jQuery anystretch img tags. Fixes #184

--- a/assets/sass/framework/atoms/_typo.scss
+++ b/assets/sass/framework/atoms/_typo.scss
@@ -161,3 +161,4 @@ img {
 #map_canvas embed { max-width: none; }
 #map_canvas img { max-width: none; }
 #map_canvas object { max-width: none; }
+.anystretch img { max-width: none;}
